feat(rbac): comprehensive role-based access guards, scoped vendor views, auditor replay copilot, tender data-scoping, and dashboard unification